tests/fixtures/invalid/min_set_list.py
# Cannot call min() with Set[int], List[int]
x = min({1, 2, 3}, [1, 2, 3])
